[package]
name = "flight-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# SPDX License Identifier
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2024 Flight Hub Team

[features]
default = ["cli"]
cli = ["dep:clap"]

[[bin]]
name = "flightctl"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
anyhow.workspace = true
flight-core = { path = "../flight-core" }
flight-ipc = { path = "../flight-ipc" }
clap = { workspace = true, optional = true }
tokio.workspace = true
serde_json.workspace = true
serde = { workspace = true }
chrono = { version = "0.4.43", features = ["serde"] }
