[package]
homepage.workspace = true
name = "flight-cloud-profiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Community profile repository client — browse, publish, and vote on shared Flight Hub profiles."
readme = "README.md"
keywords = ["flight-sim", "openflight", "profiles", "cloud", "community"]
categories.workspace = true
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2024 Flight Hub Team

[features]
default = []

[dependencies]
flight-profile = { path = "../flight-profile" }
reqwest = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
sha2.workspace = true
dirs.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-test = { workspace = true }
proptest = { workspace = true }
