[package]
name = "flight-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
once_cell.workspace = true
sha2 = "0.10"
indexmap = { version = "2.0", features = ["serde"] }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true