[package]
name = "flight-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core facade crate that re-exports OpenFlight domain modules."
readme = "README.md"
keywords = ["flight-sim", "openflight", "core", "facade"]
# SPDX License Identifier
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2024 Flight Hub Team

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true
flight-units = { path = "../flight-units" }
flight-rules = { path = "../flight-rules" }
flight-profile = { path = "../flight-profile" }
flight-process-detection = { path = "../flight-process-detection" }
flight-writers = { path = "../flight-writers" }
flight-security = { path = "../flight-security" }
flight-blackbox = { path = "../flight-blackbox" }
flight-watchdog = { path = "../flight-watchdog" }
flight-session = { path = "../flight-session" }
flight-metrics = { path = "../flight-metrics" }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
