[package]
homepage.workspace = true
name = "flight-dcs-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DCS Export.lua adapter and installer integration for OpenFlight."
readme = "README.md"
categories.workspace = true
keywords = ["flight-sim", "openflight", "dcs", "adapter"]
# SPDX License Identifier
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2024 Flight Hub Team

[dependencies]
flight-core = { path = "../flight-core" }
flight-bus = { path = "../flight-bus" }
flight-adapter-common = { path = "../flight-adapter-common" }
flight-metrics = { path = "../flight-metrics" }
tokio = { workspace = true, features = ["net", "io-util", "time", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs.workspace = true
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tempfile.workspace = true
proptest = { workspace = true }
