[package]
homepage.workspace = true
name = "flight-dcs-modules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DCS World aircraft module loader for OpenFlight"
readme = "README.md"
categories = ["aerospace", "game-development"]
keywords = ["dcs", "dcs-world", "flight-sim", "aircraft"]
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2026 Flight Hub Team

[dependencies]
flight-core = { path = "../flight-core" }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
