[package]
homepage.workspace = true
name = "flight-elite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Elite: Dangerous journal/status file-watcher adapter for OpenFlight."
readme = "README.md"
categories.workspace = true
keywords = ["flight-sim", "openflight", "elite-dangerous", "adapter"]
# SPDX License Identifier
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2026 Flight Hub Team

[dependencies]
flight-adapter-common = { path = "../flight-adapter-common" }
flight-bus = { path = "../flight-bus" }
flight-core = { path = "../flight-core" }
flight-metrics = { path = "../flight-metrics" }
tokio = { workspace = true, features = ["fs", "time", "macros", "rt"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
filetime = { workspace = true }
