[package]
homepage.workspace = true
name = "flight-falcon-bms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Falcon BMS simulator adapter for OpenFlight."
readme = "README.md"
categories.workspace = true
keywords = ["flight-sim", "openflight", "falcon-bms", "adapter"]
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2026 Flight Hub Team

[dependencies]
flight-core = { path = "../flight-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
