[package]
homepage.workspace = true
name = "flight-ffb-moza"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Moza flight peripheral driver for Flight Hub — AB9 FFB base, joystick and throttle input parsing."
readme = "README.md"
keywords = ["flight-sim", "openflight", "moza", "ffb", "joystick"]
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2024 Flight Hub Team

[features]
default = []

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
