[package]
name = "flight-ffb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# SPDX License Identifier
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2024 Flight Hub Team

[dependencies]
flight-core = { path = "../flight-core" }
flight-bus = { path = "../flight-bus" }
flight-panels = { path = "../flight-panels" }
flight-hid = { path = "../flight-hid" }
flight-virtual = { path = "../flight-virtual" }
thiserror = "1.0"
tracing = "0.1"
crossbeam.workspace = true
serde = { version = "1.0", features = ["derive"] }
