[package]
name = "flight-ffb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# SPDX License Identifier
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2024 Flight Hub Team

[dependencies]
flight-core = { path = "../flight-core" }
flight-bus = { path = "../flight-bus" }
flight-panels = { path = "../flight-panels" }
flight-hid = { path = "../flight-hid" }
flight-virtual = { path = "../flight-virtual" }
flight-metrics = { path = "../flight-metrics" }
thiserror = "2.0.18"
tracing = "0.1.44"
crossbeam.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
# Compression for blackbox fault capture exports (FFB-BLACKBOX-01)
flate2 = "1.1.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_System_Com",
] }

[features]
default = []
tests-optin = []
benches-optin = []
examples-optin = []

[dev-dependencies]
tempfile.workspace = true
filetime = "0.2.27"
