[package]
name = "flight-ffb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Force feedback engine with safety interlocks and mode negotiation."
readme = "README.md"
keywords = ["flight-sim", "openflight", "ffb", "safety"]
# SPDX License Identifier
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2024 Flight Hub Team

[dependencies]
flight-core = { path = "../flight-core" }
flight-bus = { path = "../flight-bus" }
flight-panels = { path = "../flight-panels" }
flight-hid = { path = "../flight-hid" }
flight-virtual = { path = "../flight-virtual" }
flight-metrics = { path = "../flight-metrics" }
thiserror.workspace = true
tracing.workspace = true
crossbeam.workspace = true
serde.workspace = true
# Compression for blackbox fault capture exports (FFB-BLACKBOX-01)
flate2.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = []
tests-optin = []
benches-optin = []
examples-optin = []

[dev-dependencies]
tempfile.workspace = true
filetime.workspace = true
