[package]
name = "flight-headless"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Headless and batch operation mode for OpenFlight"
readme = "README.md"
keywords = ["headless", "batch", "flight-sim", "automation"]
categories = ["aerospace", "command-line-utilities"]

[dependencies]
flight-core = { path = "../flight-core" }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
