[package]
name = "flight-hid-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared HID data types used across OpenFlight crates."
readme = "README.md"
keywords = ["flight-sim", "openflight", "hid", "types"]
# SPDX License Identifier
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2024 Flight Hub Team

[dependencies]
